tests/toylang/neg/000265_mutation.toylang
program a = { do a then sleep; } .
